--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+SPRING_DATASOURCE_URL= jdbc:postgresql://postgres:5432/mydb
+SPRING_DATASOURCE_USERNAME= user
+SPRING_DATASOURCE_PASSWORD= password
+SPRING_JPA_HIBERNATE_DDL_AUTO= update
+
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
