--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 SPRING_DATASOURCE_URL= jdbc:postgresql://postgres:5432/mydb
 SPRING_DATASOURCE_USERNAME= user
 SPRING_DATASOURCE_PASSWORD= password
-SPRING_JPA_HIBERNATE_DDL_AUTO= update
+SPRING_JPA_HIBERNATE_DDL_AUTO= create-drop
 
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
-logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.SQL=DEBUG
