--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
 logging.level.org.hibernate.SQL=DEBUG
+
+spring.mvc.problemdetails.enabled=true
