--- a/compose.yaml
+++ b/compose.yaml
@@ -9,8 +9,8 @@ services:
       POSTGRES_INITDB_ARGS: --encoding=UTF-8 --lc-collate=C --lc-ctype=C
     ports:
       - "5432:5432"
-#    volumes:
-#      - postgres_data:/var/lib/postgresql/data
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
 #    networks:
 #      - net_internal
     healthcheck:
